polar-service/front-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  type: ClusterIP
  selector:
    app: front-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9005
